--- a/my_site_1/app1/templates/app1/post/list.html
+++ b/my_site_1/app1/templates/app1/post/list.html
@@ -1,4 +1,5 @@
 {% extends "app1/base.html" %}
+{% load app1_tags %}
 {% block title %}My Blog{% endblock %}
 {% block content %}
 <h1>My Blog</h1>
@@ -11,7 +12,7 @@
 <p class="date">
 Published {{ post.publish }} by {{ post.author }}
 </p>
-{{ post.body|truncatewords:30|linebreaks }}
+{{ post.body|markdown|truncatewords_html:30 }}
 {% endfor %}
 {% include "pagination.html" with page=post_obj %}
 {% endblock %}
